crates/tesshir/tests/fixtures/check/const_equality_failed.golden
Error: check/const_equality_failed.tess:3:24: const equality predicate failed: `4096` != `4097`
