crates/tesshir/tests/fixtures/check/const_equality_failed.tess
const PAGE: usize = 4 * 1024;

fn page() -> i32 where PAGE == 4097 {
    0
}
